load("//tools/base/bazel:maven.bzl", "maven_repo")
load("//tools/base/bazel:gradle.bzl", "gradle_build")

maven_repo(
    name = "3.3.2",
    # keep sorted
    artifacts = [
        "//prebuilts/tools/common/m2/repository/androidx/databinding/databinding-common/3.3.2:jar",
        "//prebuilts/tools/common/m2/repository/androidx/databinding/databinding-compiler-common/3.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/databinding/baseLibrary/3.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/analytics-library/crash/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/analytics-library/protos/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/analytics-library/shared/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/analytics-library/tracker/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/annotations/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/aapt2-proto/0.3.1:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/aapt2/3.3.2-5309881:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/apksig/3.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/apkzlib/3.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/builder-model/3.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/builder-test-api/3.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/builder/3.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/bundletool/0.6.0:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/gradle-api/3.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/gradle/3.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/jetifier/jetifier-core/1.0.0-beta02:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/jetifier/jetifier-processor/1.0.0-beta02:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/manifest-merger/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/transform-api/2.0.0-deprecated-use-gradle-api:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/common/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/ddms/ddmlib/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/dvlib/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/external/com-intellij/intellij-core/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/external/com-intellij/kotlin-compiler/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/external/org-jetbrains/uast/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/layoutlib/layoutlib-api/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/lint/lint-api/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/lint/lint-checks/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/lint/lint-gradle-api/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/lint/lint-gradle/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/lint/lint/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/repository/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/sdk-common/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/sdklib/26.3.2:jar",
        "//prebuilts/tools/common/m2/repository/com/google/auto/value/auto-value/1.5.2:jar",
        "//prebuilts/tools/common/m2/repository/com/google/code/findbugs/jsr305/3.0.2:jar",
        "//prebuilts/tools/common/m2/repository/com/google/code/gson/gson/2.8.0:jar",
        "//prebuilts/tools/common/m2/repository/com/google/errorprone/error_prone_annotations/2.1.3:jar",
        "//prebuilts/tools/common/m2/repository/com/google/errorprone/error_prone_annotations/2.2.0:jar",
        "//prebuilts/tools/common/m2/repository/com/google/guava/guava/26.0-jre:jar",
        "//prebuilts/tools/common/m2/repository/com/google/j2objc/j2objc-annotations/1.1:jar",
        "//prebuilts/tools/common/m2/repository/com/google/jimfs/jimfs/1.1:jar",
        "//prebuilts/tools/common/m2/repository/com/google/protobuf/protobuf-java-util/3.4.0:jar",
        "//prebuilts/tools/common/m2/repository/com/google/protobuf/protobuf-java/3.4.0:jar",
        "//prebuilts/tools/common/m2/repository/com/googlecode/json-simple/json-simple/1.1:jar",
        "//prebuilts/tools/common/m2/repository/com/googlecode/juniversalchardet/juniversalchardet/1.0.3:jar",
        "//prebuilts/tools/common/m2/repository/com/squareup/javapoet/1.8.0:jar",
        "//prebuilts/tools/common/m2/repository/com/squareup/javawriter/2.5.0:jar",
        "//prebuilts/tools/common/m2/repository/com/sun/activation/javax.activation/1.2.0:jar",
        "//prebuilts/tools/common/m2/repository/com/sun/istack/istack-commons-runtime/2.21:jar",
        "//prebuilts/tools/common/m2/repository/com/sun/xml/fastinfoset/FastInfoset/1.2.13:jar",
        "//prebuilts/tools/common/m2/repository/commons-codec/commons-codec/1.9:jar",
        "//prebuilts/tools/common/m2/repository/commons-io/commons-io/2.4:jar",
        "//prebuilts/tools/common/m2/repository/commons-logging/commons-logging/1.2:jar",
        "//prebuilts/tools/common/m2/repository/it/unimi/dsi/fastutil/7.2.0:jar",
        "//prebuilts/tools/common/m2/repository/javax/inject/javax.inject/1:jar",
        "//prebuilts/tools/common/m2/repository/javax/xml/bind/jaxb-api/2.2.12-b140109.1041:jar",
        "//prebuilts/tools/common/m2/repository/net/sf/jopt-simple/jopt-simple/4.9:jar",
        "//prebuilts/tools/common/m2/repository/net/sf/kxml/kxml2/2.3.0:jar",
        "//prebuilts/tools/common/m2/repository/net/sf/proguard/proguard-base/6.0.3:jar",
        "//prebuilts/tools/common/m2/repository/net/sf/proguard/proguard-gradle/6.0.3:jar",
        "//prebuilts/tools/common/m2/repository/org/antlr/antlr4/4.5.3:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/commons/commons-compress/1.12:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/httpcomponents/httpclient/4.5.2:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/httpcomponents/httpcore/4.4.5:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/httpcomponents/httpmime/4.5.2:jar",
        "//prebuilts/tools/common/m2/repository/org/bouncycastle/bcpkix-jdk15on/1.56:jar",
        "//prebuilts/tools/common/m2/repository/org/bouncycastle/bcprov-jdk15on/1.56:jar",
        "//prebuilts/tools/common/m2/repository/org/checkerframework/checker-qual/2.5.2:jar",
        "//prebuilts/tools/common/m2/repository/org/codehaus/groovy/groovy-all/2.4.15:jar",
        "//prebuilts/tools/common/m2/repository/org/codehaus/mojo/animal-sniffer-annotations/1.14:jar",
        "//prebuilts/tools/common/m2/repository/org/glassfish/jaxb/jaxb-core/2.2.11:jar",
        "//prebuilts/tools/common/m2/repository/org/glassfish/jaxb/jaxb-runtime/2.2.11:jar",
        "//prebuilts/tools/common/m2/repository/org/glassfish/jaxb/txw2/2.2.11:jar",
        "//prebuilts/tools/common/m2/repository/org/jdom/jdom2/2.0.6:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/annotations/13.0:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlin/kotlin-reflect/1.3.21:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlin/kotlin-stdlib-common/1.3.21:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlin/kotlin-stdlib-jdk7/1.3.21:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlin/kotlin-stdlib-jdk8/1.3.21:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlin/kotlin-stdlib/1.3.21:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/trove4j/trove4j/20160824:jar",
        "//prebuilts/tools/common/m2/repository/org/jvnet/staxex/stax-ex/1.7.7:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm-analysis/6.0:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm-commons/6.0:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm-tree/6.0:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm-util/6.0:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm/6.0:jar",
    ],
    visibility = ["//visibility:public"],
)

gradle_build(
    name = "3.3.2_check",
    build_file = "tests/3.3.2/build.gradle",
    data = [
        "tests/3.3.2/src/main/AndroidManifest.xml",
        "//prebuilts/studio/sdk:build-tools/latest",
        "//prebuilts/studio/sdk:platform-tools",
        "//prebuilts/studio/sdk:platforms/latest",
    ],
    output_file = "3.3.2.aar",
    output_file_source = "outputs/aar/3.3.2.aar",
    repos = [
        ":3.3.2.zip",
    ],
    tags = [
        "no_mac",
        "no_windows",
    ],
    tasks = ["assembleRelease"],
)
