load("//tools/base/bazel:maven.bzl", "maven_repository")
load("//tools/base/bazel:gradle.bzl", "gradle_build")

#keep sorted
AGP_7_0_0_ARTIFACTS = [
    "@maven_tests//:com.android.tools.build.gradle_7.0.0",
]

maven_repository(
    name = "7.0.0",
    artifacts = AGP_7_0_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

AGP_4_2_0_ARTIFACTS = [
    "@maven_tests//:com.android.tools.build.gradle_4.2.0",
]

maven_repository(
    name = "4.2.0",
    artifacts = AGP_4_2_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

AGP_4_1_0_ARTIFACTS = [
    "@maven_tests//:com.android.tools.build.gradle_4.1.0",
    "@maven_tests//:com.android.tools.build.aapt2.linux_4.1.0-6503028",
    "@maven_tests//:com.android.tools.lint.lint-gradle_27.1.0",
]

maven_repository(
    name = "4.1.0",
    artifacts = AGP_4_1_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

AGP_4_0_0_ARTIFACTS = [
    "@maven_tests//:com.android.tools.build.gradle_4.0.0",
    "@maven_tests//:com.android.tools.build.aapt2.linux_4.0.0-6051327",
    "@maven_tests//:com.android.tools.lint.lint-gradle_27.0.0",
]

maven_repository(
    name = "4.0.0",
    artifacts = AGP_4_0_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

KOTLIN_GRADLE_PLUGIN_1_3_72_ARTIFACTS = [
    "@maven_tests//:org.jetbrains.kotlin.kotlin-gradle-plugin_1.3.72",
    "@maven_tests//:org.jetbrains.kotlin.kotlin-android-extensions-runtime_1.3.72",
]

maven_repository(
    name = "kgp1.3.72",
    artifacts = KOTLIN_GRADLE_PLUGIN_1_3_72_ARTIFACTS,
    visibility = ["//visibility:public"],
)

# keep sorted
AGP_3_5_0_ARTIFACTS = [
    "@maven_tests//:com.android.tools.build.aapt2.linux_3.5.0-5435860",
    "@maven_tests//:com.android.tools.build.gradle_3.5.0",
    "@maven_tests//:com.android.tools.lint.lint-gradle_26.5.0",
]

# keep sorted
KOTLIN_GRADLE_PLUGIN_1_3_41_ARTIFACTS = [
    "@maven_tests//:org.jetbrains.kotlin.kotlin-android-extensions-runtime_1.3.41",
    "@maven_tests//:org.jetbrains.kotlin.kotlin-gradle-plugin_1.3.41",
]

maven_repository(
    name = "3.5.0",
    artifacts = AGP_3_5_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

maven_repository(
    name = "performance_test_repo_3.5.0",
    testonly = True,
    artifacts = AGP_3_5_0_ARTIFACTS + KOTLIN_GRADLE_PLUGIN_1_3_41_ARTIFACTS,
    visibility = ["//prebuilts/studio/buildbenchmarks:__subpackages__"],
)

gradle_build(
    name = "3.5.0_check",
    build_file = "tests/3.5.0/build.gradle",
    data = [
        "tests/3.5.0/src/main/AndroidManifest.xml",
        "//prebuilts/studio/sdk:build-tools/latest",
        "//prebuilts/studio/sdk:platform-tools",
        "//prebuilts/studio/sdk:platforms/latest",
    ],
    gradle_version = "6.5",  # AGP 3.5 is not supported by Gradle 7.0+
    output_file = "3.5.0.aar",
    output_file_source = "outputs/aar/3.5.0-release.aar",
    repos = [
        ":3.5.0",
    ],
    tags = [
        "no_mac",
        "no_windows",
    ],
    tasks = ["assembleRelease"],
)

maven_repository(
    name = "3.3.2",
    # keep sorted
    artifacts = [
        "@maven_tests//:com.android.tools.build.aapt2.linux_3.3.2-5309881",
        "@maven_tests//:com.android.tools.build.gradle_3.3.2",
        "@maven_tests//:com.android.tools.lint.lint-gradle_26.3.2",
    ],
    visibility = ["//visibility:public"],
)

gradle_build(
    name = "3.3.2_check",
    build_file = "tests/3.3.2/build.gradle",
    data = [
        "tests/3.3.2/src/main/AndroidManifest.xml",
        "//prebuilts/studio/sdk:build-tools/latest",
        "//prebuilts/studio/sdk:platform-tools",
        "//prebuilts/studio/sdk:platforms/latest",
    ],
    gradle_version = "5.5",
    output_file = "3.3.2.aar",
    output_file_source = "outputs/aar/3.3.2.aar",
    repos = [
        ":3.3.2",
    ],
    tags = [
        "no_mac",
        "no_windows",
    ],
    tasks = ["assembleRelease"],
)

maven_repository(
    name = "3.0.0",
    # keep sorted
    artifacts = [
        "@maven_tests//:com.android.tools.build.gradle_3.0.0",
    ],
    visibility = ["//visibility:public"],
)

gradle_build(
    name = "3.0.0_check",
    build_file = "tests/3.0.0/build.gradle",
    gradle_version = "5.5",
    output_file = "3.0.0_dependencies_list.txt",
    output_file_source = "dependencies_list.txt",
    repos = [
        ":3.0.0",
    ],
    tags = [
        "no_mac",
        "no_windows",
    ],
    tasks = ["listDependencies"],
)

maven_repository(
    name = "2.3.2",
    # keep sorted
    artifacts = [
        "@maven_tests//:com.android.tools.build.gradle_2.3.2",
    ],
    visibility = ["//visibility:public"],
)

maven_repository(
    name = "2.2.0",
    # keep sorted
    artifacts = [
        "@maven_tests//:com.android.tools.build.gradle_2.2.0",
    ],
    visibility = ["//visibility:public"],
)

maven_repository(
    name = "1.5.0",
    # keep sorted
    artifacts = [
        "@maven_tests//:com.android.tools.build.gradle_1.5.0",
    ],
    visibility = ["//visibility:public"],
)
