load("//tools/base/bazel:maven.bzl", "maven_repository")
load("//tools/base/bazel:gradle.bzl", "gradle_build")

#keep sorted
AGP_7_4_0_ARTIFACTS = [
    "@maven//:com.android.tools.build.aapt2_7.4.0-alpha09-8841542",
    "@maven//:com.android.tools.build.gradle_7.4.0-alpha09",
    "@maven//:com.android.tools.lint.lint-gradle_30.4.0-alpha09",
]

maven_repository(
    name = "7.4.0",
    artifacts = AGP_7_4_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

#keep sorted
AGP_7_3_0_ARTIFACTS = [
    "@maven//:com.android.tools.build.aapt2_7.3.0-rc01-8691043",
    "@maven//:com.android.tools.build.gradle_7.3.0-rc01",
    "@maven//:com.android.tools.lint.lint-gradle_30.3.0-rc01",
]

maven_repository(
    name = "7.3.0",
    artifacts = AGP_7_3_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

#keep sorted
AGP_7_2_0_ARTIFACTS = [
    "@maven//:com.android.tools.build.aapt2_7.2.0-7984345",
    "@maven//:com.android.tools.build.gradle_7.2.0",
    "@maven//:com.android.tools.lint.lint-gradle_30.2.0",
]

maven_repository(
    name = "7.2.0",
    artifacts = AGP_7_2_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

#keep sorted
AGP_7_1_0_ARTIFACTS = [
    "@maven//:com.android.tools.build.aapt2_7.1.0-7984345",
    "@maven//:com.android.tools.build.gradle_7.1.0",
    "@maven//:com.android.tools.lint.lint-gradle_30.1.0",
]

maven_repository(
    name = "7.1.0",
    artifacts = AGP_7_1_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

#keep sorted
AGP_7_0_0_ARTIFACTS = [
    "@maven//:com.android.tools.build.aapt2_7.0.0-7396180",
    "@maven//:com.android.tools.build.gradle_7.0.0",
    "@maven//:com.android.tools.lint.lint-gradle_30.0.0",
]

maven_repository(
    name = "7.0.0",
    artifacts = AGP_7_0_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

AGP_4_2_0_ARTIFACTS = [
    "@maven//:com.android.tools.build.gradle_4.2.0",
    "@maven//:com.android.tools.build.aapt2_4.2.0-7147631",
    "@maven//:com.android.tools.lint.lint-gradle_27.2.0",
]

maven_repository(
    name = "4.2.0",
    artifacts = AGP_4_2_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

AGP_4_1_0_ARTIFACTS = [
    "@maven//:com.android.tools.build.gradle_4.1.0",
    "@maven//:com.android.tools.build.aapt2_4.1.0-6503028",
    "@maven//:com.android.tools.lint.lint-gradle_27.1.0",
]

maven_repository(
    name = "4.1.0",
    artifacts = AGP_4_1_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

AGP_4_0_0_ARTIFACTS = [
    "@maven//:com.android.tools.build.gradle_4.0.0",
    "@maven//:com.android.tools.build.aapt2_4.0.0-6051327",
    "@maven//:com.android.tools.lint.lint-gradle_27.0.0",
]

maven_repository(
    name = "4.0.0",
    artifacts = AGP_4_0_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

KOTLIN_GRADLE_PLUGIN_1_3_72_ARTIFACTS = [
    "@maven//:org.jetbrains.kotlin.kotlin-gradle-plugin_1.3.72",
    "@maven//:org.jetbrains.kotlin.kotlin-android-extensions-runtime_1.3.72",
]

maven_repository(
    name = "kgp1.3.72",
    artifacts = KOTLIN_GRADLE_PLUGIN_1_3_72_ARTIFACTS,
    visibility = ["//visibility:public"],
)

# keep sorted
AGP_3_5_0_ARTIFACTS = [
    "@maven//:com.android.tools.build.aapt2_3.5.0-5435860",
    "@maven//:com.android.tools.build.gradle_3.5.0",
    "@maven//:com.android.tools.lint.lint-gradle_26.5.0",
]

# keep sorted
KOTLIN_GRADLE_PLUGIN_1_3_41_ARTIFACTS = [
    "@maven//:org.jetbrains.kotlin.kotlin-android-extensions-runtime_1.3.41",
    "@maven//:org.jetbrains.kotlin.kotlin-gradle-plugin_1.3.41",
]

maven_repository(
    name = "3.5.0",
    artifacts = AGP_3_5_0_ARTIFACTS,
    visibility = ["//visibility:public"],
)

maven_repository(
    name = "performance_test_repo_3.5.0",
    testonly = True,
    artifacts = AGP_3_5_0_ARTIFACTS + KOTLIN_GRADLE_PLUGIN_1_3_41_ARTIFACTS,
    visibility = ["//prebuilts/studio/buildbenchmarks:__subpackages__"],
)

gradle_build(
    name = "3.5.0_check",
    build_file = "tests/3.5.0/build.gradle",
    data = [
        "tests/3.5.0/src/main/AndroidManifest.xml",
        "//prebuilts/studio/sdk:build-tools/latest",
        "//prebuilts/studio/sdk:platform-tools",
        "//tools/base/build-system:android_platform_for_tests",
    ],
    gradle_version = "6.5",  # AGP 3.5 is not supported by Gradle 7.0+
    output_file = "3.5.0.aar",
    output_file_source = "outputs/aar/3.5.0-release.aar",
    repos = [
        ":3.5.0",
    ],
    tags = [
        "no_mac",
        "no_windows",
    ],
    tasks = ["assembleRelease"],
)

maven_repository(
    name = "3.3.2",
    # keep sorted
    artifacts = [
        "@maven//:com.android.tools.build.aapt2_3.3.2-5309881",
        "@maven//:com.android.tools.build.gradle_3.3.2",
        "@maven//:com.android.tools.lint.lint-gradle_26.3.2",
    ],
    visibility = ["//visibility:public"],
)

gradle_build(
    name = "3.3.2_check",
    build_file = "tests/3.3.2/build.gradle",
    data = [
        "tests/3.3.2/src/main/AndroidManifest.xml",
        "//prebuilts/studio/sdk:build-tools/latest",
        "//prebuilts/studio/sdk:platform-tools",
        "//tools/base/build-system:android_platform_for_tests",
    ],
    gradle_version = "5.5",
    output_file = "3.3.2.aar",
    output_file_source = "outputs/aar/3.3.2.aar",
    repos = [
        ":3.3.2",
    ],
    tags = [
        "no_mac",
        "no_windows",
    ],
    tasks = ["assembleRelease"],
)

AGP_3_1_4_ARTIFACTS = ["@maven//:com.android.tools.build.gradle_3.1.4"]

maven_repository(
    name = "3.1.4",
    artifacts = AGP_3_1_4_ARTIFACTS,
    visibility = ["//tools/adt/idea/old-agp-tests:__pkg__"],
)

maven_repository(
    name = "3.0.0",
    # keep sorted
    artifacts = [
        "@maven//:com.android.tools.build.gradle_3.0.0",
    ],
    visibility = ["//visibility:public"],
)

gradle_build(
    name = "3.0.0_check",
    build_file = "tests/3.0.0/build.gradle",
    gradle_version = "5.5",
    output_file = "3.0.0_dependencies_list.txt",
    output_file_source = "dependencies_list.txt",
    repos = [
        ":3.0.0",
    ],
    tags = [
        "no_mac",
        "no_windows",
    ],
    tasks = ["listDependencies"],
)

maven_repository(
    name = "2.3.2",
    # keep sorted
    artifacts = [
        "@maven//:com.android.tools.build.gradle_2.3.2",
    ],
    visibility = ["//visibility:public"],
)

maven_repository(
    name = "2.2.0",
    # keep sorted
    artifacts = [
        "@maven//:com.android.tools.build.gradle_2.2.0",
    ],
    visibility = ["//visibility:public"],
)

maven_repository(
    name = "1.5.0",
    # keep sorted
    artifacts = [
        "@maven//:com.android.tools.build.gradle_1.5.0",
    ],
    visibility = ["//visibility:public"],
)
