load("//tools/base/bazel:maven.bzl", "maven_repo")
load("//tools/base/build-system/integration-test:integration-test.bzl", "gradle_integration_test")

gradle_integration_test(
    name = "tests",
    srcs = glob(
        [
            "src/test/java/**/*.java",
            "src/test/java/**/*.kt",
        ],
    ),
    data = [
        "//prebuilts/studio/sdk:build-tools/latest",
        "//prebuilts/studio/sdk:platform-tools",
        "//prebuilts/studio/sdk:platforms/latest",
        "//tools/base/build-system:gradle-distrib",
        "//tools/base/build-system/integration-test:test-projects/apiBinaryCompatibility",
    ],
    maven_repo_manifests = [
        "//tools/base/build-system:gradle_plugin_no_databinding_repo",
        "//tools/base/build-system/integration-test:androidx_latest",
        "//tools/base/build-system/integration-test:gradle_kotlin_dsl_prebuilts",
        "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
        "//tools/base/build-system/integration-test/api:prebuilts",
        "//tools/base/build-system/previous-versions:3.5.0",
    ],
    #keep sorted
    maven_repos = [],
    resources = glob(["src/test/resources/**"]),
    shard_count = 1,
    deps = [
        "//tools/analytics-library/protos/src/main/proto",
        "//tools/apksig",
        "//tools/apkzlib",
        "//tools/base/annotations",
        "//tools/base/build-system:gradle-api",
        "//tools/base/build-system/builder",
        "//tools/base/build-system/builder-model",
        "//tools/base/build-system/builder-test-api:tools.builder-test-api",
        "//tools/base/build-system/integration-test/framework",
        "//tools/base/build-system/integration-test/framework/src/main/proto",
        "//tools/base/common:tools.common",
        "//tools/base/sdk-common:tools.sdk-common",
        "//tools/base/sdklib:tools.sdklib",
        "//tools/base/testutils:tools.testutils",
        "//tools/base/third_party:com.google.guava_guava",
        "//tools/base/third_party:com.google.truth.extensions_truth-java8-extension",
        "//tools/base/third_party:com.google.truth_truth",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-stdlib",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-test",
    ],
)

# Maven repo with all the dependencies required by test projects.
#
# Quick way of updating this list:
# - Run the new test with bazel
# - Copy the output log to $PWD/test.log
# - Run this command:
# grep -F '> Could not find' test.log \
#   | sed -e 's:> Could not find :"//prebuilts/tools/common/m2/repository/:' \
#   | sed -e 's/:/\//g' \
#   | sed -e 's/\.$/:jar",/' \
#   | sed -e 's/\([a-z]\)\.\([a-z]\)/\1\/\2/g'
maven_repo(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "//prebuilts/tools/common/m2/repository/de/undercouch/gradle-download-task/4.0.2:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlin/kotlin-reflect/1.3.72:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlin/kotlin-stdlib-common/1.3.72:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlin/kotlin-stdlib/1.3.72:jar",
    ],
    use_zip = False,
    visibility = ["__subpackages__"],
)
