load("//tools/base/build-system/integration-test:integration-test.bzl", "gradle_integration_test")

gradle_integration_test(
    name = "tests",
    srcs = glob(
        [
            "src/test/java/**/*.java",
            "src/test/java/**/*.kt",
        ],
    ),
    data = [
        "//prebuilts/studio/sdk:build-tools/latest",
        "//prebuilts/studio/sdk:platform-tools",
        "//tools/base/build-system:gradle-distrib",
        "//tools/base/build-system/integration-test:android_platform_for_tests",
        "//tools/base/build-system/integration-test:test-projects/apiBinaryCompatibility",
    ],
    #keep sorted
    maven_repo_zips = [
        "//tools/base/build-system:android_gradle_plugin",
    ],
    #keep sorted
    maven_repos = [
        "//tools/base/build-system:android_gradle_plugin_runtime_dependencies",
        "//tools/base/build-system/integration-test:androidx_latest",
        "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
        "//tools/base/build-system/previous-versions:3.5.0",
    ],
    resources = glob(["src/test/resources/**"]),
    shard_count = 1,
    deps = [
        "//tools/analytics-library/protos/src/main/proto",
        "//tools/apksig",
        "//tools/apkzlib",
        "//tools/base/annotations",
        "//tools/base/build-system:gradle-api",
        "//tools/base/build-system/builder",
        "//tools/base/build-system/builder-model",
        "//tools/base/build-system/builder-test-api:tools.builder-test-api",
        "//tools/base/build-system/integration-test/framework",
        "//tools/base/build-system/integration-test/framework/src/main/proto",
        "//tools/base/common:tools.common",
        "//tools/base/sdk-common:tools.sdk-common",
        "//tools/base/sdklib:tools.sdklib",
        "//tools/base/testutils:tools.testutils",
        "@maven//:com.google.guava.guava",
        "@maven//:com.google.truth.extensions.truth-java8-extension",
        "@maven//:com.google.truth.truth",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib",
        "@maven//:org.jetbrains.kotlin.kotlin-test",
    ],
)
